--- a/TMDBMoviesDataAnalysis.ipynb
+++ b/TMDBMoviesDataAnalysis.ipynb
@@ -40,8 +40,8 @@
     "9.\tbudget_adj - budget in terms of 2010 dollars, accounting for inflation over time\n",
     "10.\trevenue - Amount in USD the movie generated in sales\n",
     "11.\trevenue_adj - revenue in terms of 2010 dollars, accounting for inflation over time\n",
-    "12. vote_count - \n",
-    "13. vote_average - \n",
+    "12. vote_count - Number of votes for each movie\n",
+    "13. vote_average - Average rating of all votes per movie\n",
     "15. Popularity - A rating of how popular each movie is\n",
     "16. Revenue - Amount in USD the movie generated in sales\n",
     "17 - net_profit - profit(revenue - budget) made on each movie\n",
@@ -610,14 +610,9 @@
     "<a id='eda'></a>\n",
     "## Exploratory Data Analysis\n",
     "\n",
-    "> **Tip**: Now that you've trimmed and cleaned your data, you're ready to move on to exploration. **Compute statistics** and **create visualizations** with the goal of addressing the research questions that you posed in the Introduction section. You should compute the relevant statistics throughout the analysis when an inference is made about the data. Note that at least two or more kinds of plots should be created as part of the exploration, and you must  compare and show trends in the varied visualizations. \n",
     "\n",
     "\n",
-    "\n",
-    "> **Tip**: - Investigate the stated question(s) from multiple angles. It is recommended that you be systematic with your approach. Look at one variable at a time, and then follow it up by looking at relationships between variables. You should explore at least three variables in relation to the primary question. This can be an exploratory relationship between three variables of interest, or looking at how two independent variables relate to a single dependent variable of interest. Lastly, you  should perform both single-variable (1d) and multiple-variable (2d) explorations.\n",
-    "\n",
-    "\n",
-    "## Research Question 1 Most popular movie genre year by year "
+    "## Research Question 1: Most popular movie genre year by year "
    ]
   },
   {
@@ -1123,7 +1118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Research Question 2  (Top 10 Most profitable movies and least profitable movies)"
+    "## Research Question 2: (Top 10 Most profitable movies and least profitable movies)"
    ]
   },
   {
@@ -1366,7 +1361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Research Question 3 (Properties associated with high revenue movies)\n",
+    "## Research Question 3: (Properties associated with high revenue movies)\n",
     "\n",
     "\n"
    ]
@@ -1638,7 +1633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Research Question 4 (Top 20 Highest-grossing Actors on average)"
+    "## Research Question 4: (Top 20 Highest-grossing Actors on average)"
    ]
   },
   {
